--- a/themes/antares-3/layout/_partial/article.ejs
+++ b/themes/antares-3/layout/_partial/article.ejs
@@ -5,7 +5,9 @@
       <a class="post__title post--focused" href="<%- config.root + post.path %>" class="post__title"><%- item.title %></a>
     </h1>
   </header>
-  <%- post.content %>
+  <div class="post__content">
+    <%- post.content %>
+  </div>
   <footer class="article-footer">
       <%- partial('post/tag') %>
       <%- partial('post/category') %>
