--- a/themes/antares-3/source/css/mobile.css
+++ b/themes/antares-3/source/css/mobile.css
@@ -220,7 +220,7 @@
     padding: 2rem;
 }
 
-.post--article > p:first-of-type {
+.post__content > p:first-of-type {
 	font-family: "Inter", sans-serif;
 	font-size: 1.5em;
 	font-weight: 200;
@@ -239,10 +239,10 @@
 
 .page-content p,
 .img-wrapper,
-.post--article > p,
-.post--article > ol,
-.post--article > ul,
-.post--article > dl,
+.post__content > p,
+.post__content > ol,
+.post__content > ul,
+.post__content > dl,
 .table {
     max-width: 60ch;
     margin: auto;
@@ -256,7 +256,7 @@
     padding-left: 0;
 }
 
-.post--article > dl dt {
+.post__content > dl dt {
     border-bottom: 1px solid #fff3;
     margin-top: 2rem;
     color: var(--heading-color);
@@ -269,12 +269,12 @@
 .page .page-content > h4,
 .page .page-content > h5,
 .page .page-content > h6
-.post--article > h1,
-.post--article > h2,
-.post--article > h3,
-.post--article > h4,
-.post--article > h5,
-.post--article > h6 {
+.post__content > h1,
+.post__content > h2,
+.post__content > h3,
+.post__content > h4,
+.post__content > h5,
+.post__content > h6 {
     max-width: 60ch;
     margin: auto;
     line-height: 1;
@@ -288,6 +288,7 @@
     font-size: 2em;
 }
 
+table,
 .table {
 	/* border-collapse: collapse; */
 	overflow: auto;
@@ -295,10 +296,13 @@
 	background-color: var(--primary-dark);
 }
 
+table img,
 .table img {
     min-width: 100px;
 }
 
+table td,
+table th,
 .table td,
 .table th {
 	/* border: 1px solid var(--primary-dark); */
@@ -306,6 +310,7 @@
 	background-color: var(--background);
 }
 
+table th,
 .table th {
     background-color: var(--primary);
     font-family: var(--ui-font);
@@ -314,12 +319,12 @@
 }
 
 .page-content > blockquote,
-.post--article > blockquote {
+.post__content > blockquote {
     padding: 4rem 0 6rem;
 }
 
 .page-content > blockquote:not([class]) p,
-.post--article > blockquote:not([class]) p {
+.post__content > blockquote:not([class]) p {
     font-size: 2rem;
     line-height: 1.2;
     font-family: var(--ui-font);
@@ -330,8 +335,8 @@
 .side-note::before, .side-note::after,
 .page-content > blockquote p:first-of-type::before,
 .page-content > blockquote p:first-of-type::after,
-.post--article > blockquote p:first-of-type::before,
-.post--article > blockquote p:first-of-type::after {
+.post__content > blockquote p:first-of-type::before,
+.post__content > blockquote p:first-of-type::after {
     content: '';
     display: block;
     padding: 1px;
@@ -341,7 +346,7 @@
 }
 
 .page-content > blockquote .citation,
-.post--article > blockquote .citation {
+.post__content > blockquote .citation {
     font-family: var(--ui-font);
     font-style: normal;
     text-align: center;
@@ -350,7 +355,7 @@
 }
 
 .page-content > blockquote .citation::before,
-.post--article > blockquote .citation::before {
+.post__content > blockquote .citation::before {
     content: '―'
 }
 
@@ -470,4 +475,13 @@
 .empty-cell {
     background: var(--background) !important;
     border: unset !important;
+} 
+
+
+q::before {
+    content: '“';
+}
+
+q::after {
+    content: '”'
 }
