--- a/themes/antares-3/layout/_partial/footer.ejs
+++ b/themes/antares-3/layout/_partial/footer.ejs
@@ -1,11 +1,13 @@
-<footer class="footer" role="contentinfo">
-  <div>
+<footer class="layout layout--footer" role="contentinfo">
+  <div class="footer__division">
+  <a href="<%- config.root + theme.menu.About %>">Tungkol sa Antares Programming</a>
+  <a href="https://www.facebook.com/antaresprogramming"><i>Antares Programming</i> sa Facebook</a>
+  <a href="#">Back to top</a>
+  </div>
+  <div class="footer__division text-align--right">
     <p>&copy; 2019 Antares Programming</p>
     <p>Reserbado ang lahat ng karapatan.</p>
   </div>
-  <div><a href="<%- config.root + theme.menu.About %>">Tungkol sa Antares Programming</a>
-  <a href="https://www.facebook.com/antaresprogramming"><i>Antares Programming</i> sa Facebook</a>
-  <p id="back-to-top"><a href="#top">Back to top</a></p></div>
 </footer>
 <script>
     var CONFIG_ROOT = `<%- config.root %>`;
