--- a/themes/antares-3/layout/tag.ejs
+++ b/themes/antares-3/layout/tag.ejs
@@ -1,4 +1,4 @@
 <div class="tags-archive">
-    <h1 class="archive-title">Posts with <span class="hashtag">#<%- page.tag %></span></h1>
+    <h1 class="sr-only">Posts with <span class="hashtag">#<%- page.tag %></span></h1>
     <%- partial('_partial/archive', {pagination: page.tag, index: true}) %>
 </div>
