--- a/themes/antares-3/layout/_partial/archive.ejs
+++ b/themes/antares-3/layout/_partial/archive.ejs
@@ -1,34 +1,32 @@
-<% console.log(pagination) %>
-<% if (pagination == 2){ %>
-  <% page.posts.each(function(post){ %>
-    <%- partial('article', {post: post, index: true}) %>
-  <% }) %>
-<% } else { %>
-  <% var last; %>
-  <% page.posts.each(function(post, i){ %>
-    <% var year = post.date.year(); %>
-    <% if (last != year){ %>
-      <% last = year; %>
-      <section class="archives-wrap">
-        <div class="archive-year-wrap">
-          <% if(!is_tag() && !is_category()) { %>
-          Mga Post Mula sa 
-          <% } %>
-          <a href="<%- url_for(config.archive_dir + '/' + year) %>" class="archive-year"><%= year %></a>
-        </div>
-        <div class="archives">
-    <% } %>
-    <%- partial('archive-post', {post: post, even: i % 2 == 0}) %>
-  <% }) %>
-  <% if (page.posts.length){ %>
-    </div></section>
-  <% } %>
-<% } %>
-<% if (page.total > 1){ %>
-  <nav id="page-nav">
-    <%- paginator({
-      prev_text: "&laquo; __('prev')",
-      next_text: "__('next') &raquo;"
-    }) %>
-  </nav>
-<% } %>
+<% const postsGroupedByYear = [] %>
+<% page.posts.each(function(post){ %>
+<%
+  var postYear = +(post.date.year())
+
+  if(postsGroupedByYear[postYear] == null)
+    postsGroupedByYear[postYear] = [];
+
+  postsGroupedByYear[postYear].push(post);
+
+%>
+<% }) %>
+<% const posts = postsGroupedByYear; %><%posts.forEach((postsInYear, year) => {
+  let yearUrl = url_for(config.archive_dir) + '/' + year;
+%>
+<section class="archive__by-year">
+  <a href="<%- yearUrl %>" class=archive-year>
+    <% if(is_tag()) %> <%- page.tag %>
+    <% if(is_category()) {%>
+    <%- page.category %>
+    <%} else { %><%- "Posts" %><% } %>
+    in
+    <%= year %>
+  </a>
+  <div class="archive__posts">
+  <%postsInYear.forEach(post => {%>
+    <%- partial('archive-post', {post}); %>
+  <%});%>
+  </div>
+</section>
+<%})%>
+
