--- a/themes/antares-3/layout/_partial/article.ejs
+++ b/themes/antares-3/layout/_partial/article.ejs
@@ -1,8 +1,8 @@
 <% const item = post %>
-<article class="post--article">
+<article class="post post--article">
   <header>
     <h1>
-      <a class="post__title post--focused" href="<%- config.root + post.path %>" class="post__title"><%- item.title %></a>
+      <a class="post__title" href="<%- config.root + post.path %>"><%- item.title %></a>
     </h1>
   </header>
   <div class="post__content">
