--- a/themes/antares-3/layout/_widget/category.ejs
+++ b/themes/antares-3/layout/_widget/category.ejs
@@ -1,7 +1,7 @@
 <% if (site.categories.length){ %>
-  <section class="widget-wrap">
-    <h3 class="widget-title"><%= __('categories') %></h3>
-    <div class="widget">
+  <section class="widget">
+    <h3 class="widget__title"><%= __('categories') %></h3>
+    <div class="widget__component">
       <%- list_categories({show_count: theme.show_count}) %>
     </div>
   </div>
