--- a/themes/antares-3/layout/_widget/tag.ejs
+++ b/themes/antares-3/layout/_widget/tag.ejs
@@ -1,7 +1,7 @@
 <% if (site.tags.length){ %>
-  <div class="widget-wrap">
-    <h3 class="widget-title"><%= __('tags') %></h3>
-    <div class="widget">
+  <div class="widget">
+    <h3 class="widget__title"><%= __('tags') %></h3>
+    <div class="widget__component">
       <%- list_tags({show_count: theme.show_count}) %>
     </div>
   </div>
