--- a/themes/antares-3/layout/archive.ejs
+++ b/themes/antares-3/layout/archive.ejs
@@ -1,1 +1,3 @@
-<%- partial('_partial/archive', {pagination: config.archive, index: true}) %>
+<main id="main-content" class="layout layout--archive">
+    <%- partial('_partial/archive', {pagination: config.archive, index: true}) %>
+</main>
