--- a/themes/antares-3/layout/index.ejs
+++ b/themes/antares-3/layout/index.ejs
@@ -1,11 +1,9 @@
 <h1 class="sr-only">Antares Programming</h1>
-<div class="posts-wrapper">
-    <main id="main-content" class="main--index">
-        <% 
-            page.posts.each(function(item){ 
-        %>
-            <%- partial('_partial/article-excerpt', {item: item, is_featured: false, with_excerpt: true}) %>
-        <% }); %>
-    </main>
-    <%- partial('_partial/sidebar', null, {cache: !config.relative_link}) %>
-</div>
+<main id="main-content" class="layout layout--index">
+    <% 
+        page.posts.each(function(item){ 
+    %>
+        <%- partial('_partial/article-excerpt', {item: item, is_featured: false, with_excerpt: true}) %>
+    <% }); %>
+</main>
+<%- partial('_partial/sidebar', null, {cache: !config.relative_link}) %>
