--- a/themes/antares-3/layout/layout.ejs
+++ b/themes/antares-3/layout/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="<%- page.lang %>" class="dark">
 <%- partial('_partial/head') %>
-<body>
+<body class="layout layout--layout">
     <% const pageShouldBeRendered = page.render == null? true : false; %>
     <% if(pageShouldBeRendered) { %>
     <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
