--- a/themes/antares-3/layout/post.ejs
+++ b/themes/antares-3/layout/post.ejs
@@ -1,3 +1,3 @@
-<main class="page--post">
+<main class="layout layout--post" id="main-content">
 <%- partial('_partial/article', {post: page, index: false}) %>
 </main>
