--- a/themes/antares-3/layout/_partial/article-excerpt.ejs
+++ b/themes/antares-3/layout/_partial/article-excerpt.ejs
@@ -4,7 +4,7 @@
             <a href="<%- config.root %><%- item.path %>" class="post__title"><%- item.title %></a>
         </h2>
         <div class="post__meta">
-            <address rel="author" class="post__author"><%= item.author.name || "" %></address>
+            <address rel="author" class="post__author"><%= !!item.author ? item.author.name : "" %></address>
             <time pubdate datetime="<%= new Date(item.date).toJSON() %>" class="post__publish-date"><%= item.date.format(config.date_format) %></time>
         </div>
     </header>
